Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105011

QtWidgets Vulkan RHI backend doesn't support translucency on Wayland

XMLWordPrintable

    • Linux/Wayland
    • 71e3840f3a (qt/qtbase/dev) 71e3840f3a (qt/tqtc-qtbase/dev) 97057cbf44 (qt/qtbase/6.4)

      I applied the following patches on top of 6.4.0 beta2:

      1. https://codereview.qt-project.org/c/qt/qtbase/+/421794
      2. https://codereview.qt-project.org/c/qt/qtbase/+/422057

      Now that I can run the default RHI configuration without any issues, I decided to go further and try Vulkan backend. Unfortunately, windows with WA_TranslucentBackground don't have translucency, just like on X11 without the first patch. QOpenGLWidgets lose the translucency in this configuration, too.

        For Gerrit Dashboard: QTBUG-105011
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            ilya-fedin Ilya Fedin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes