rhi: vulkan: Improve alpha swapchain logic

Fixes: QTBUG-105011
Change-Id: Iea113d92e3261711b4fce88733cc2d7472b10829
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit 71e3840f3a36eb176fe5896c4fbc888a00968ad3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>